--- a/style.css
+++ b/style.css
@@ -6,14 +6,26 @@ Html, body {
 }
 
 body {
-    background-image: linear-gradient(280deg, gray, white);
+    background-image: linear-gradient(280deg, #eee, white);
     overflow: clip auto;
     font-family: Arial, Helvetica, sans-serif;
+
+    display: grid;
+    place-content: center;
+    place-items: center;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 scratch-card {
-    width: 600px;
-    height: 300px;
+    width: 5cm;
+    height: 2cm;
     max-width: 100vw;
+    box-shadow: 0 0 3rem rgba(0,0,0,0.25);
+
+    border-radius: 0.5rem;
+    background: white;
 }
 
