--- a/example/css/style.css
+++ b/example/css/style.css
@@ -1,4 +1,4 @@
-Html, body {
+html, body {
   height: 100%;
   padding: 0;
   margin: 0;
@@ -25,7 +25,7 @@ scratch-card:not(:defined) {
 
 scratch-card:defined {
   opacity: 1;
-  transition: opacity 250ms 150ms;
+  transition: opacity 250ms 50ms;
 }
 
 scratch-card {
@@ -33,6 +33,7 @@ scratch-card {
   height: 2cm;
   max-width: 100vw;
   box-shadow: 0 0 3rem rgba(0, 0, 0, 0.25);
+  color: #333;
 
   border-radius: 0.5rem;
   background: white;
